<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mudlife.myfinder.MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
      <TextView
          android:id="@+id/fanhui"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_gravity="left"
          android:gravity="left"
          android:text="@string/fanhui"
          android:textSize="24dp"
          android:visibility="gone"/>

      <TextView
          android:id="@+id/sousuo"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_gravity="right"
          android:gravity="right"
          android:text="@string/sousuo"
          android:textSize="24dp"/>
   </LinearLayout>

   <FrameLayout
       android:id="@+id/bootmNav"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="8"/>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal">

      <RelativeLayout
          android:id="@+id/first_layout"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
            <ImageView
                android:id="@+id/first_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/shouye"/>
            <TextView
                android:id="@+id/first_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/shouye"
                android:textColor="@color/colorBootmNav"/>
         </LinearLayout>
      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/second_layout"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_weight="1">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
            <ImageView
                android:id="@+id/second_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/paizhao"/>
            <TextView
                android:id="@+id/second_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/paizhao"
                android:textColor="@color/colorBootmNav"/>
         </LinearLayout>
      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/third_layout"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_weight="1">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
            <ImageView
                android:id="@+id/third_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/dingwei"/>
            <TextView
                android:id="@+id/third_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/dingwei"
                android:textColor="@color/colorBootmNav"/>
         </LinearLayout>
      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/fourth_layout"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_weight="1">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
            <ImageView
                android:id="@+id/fourth_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/jieshao"/>
            <TextView
                android:id="@+id/fourth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/jieshao"
                android:textColor="@color/colorBootmNav"/>
         </LinearLayout>
      </RelativeLayout>
   </LinearLayout>

</LinearLayout>
