<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finder_item"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/finder_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@mipmap/finder_device1"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/finder_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="30dp"
            android:text="设备名"/>

        <TextView
            android:id="@+id/finder_statuse"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="30dp"
            android:text="状态:闲置"/>

        <TextView
            android:id="@+id/finder_distance"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="30dp"
            android:text="距离:近"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal">
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:gravity="center"
               android:text="@string/fangdiu"/>

           <Switch
               android:id="@+id/finder_fangdiu"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:checked="true"
               android:switchMinWidth="48dp"
               tools:checked="true" />

       </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/xunzhao"/>
            <Switch
                android:id="@+id/finder_xunzhao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:switchMinWidth="48dp"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">
        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/delete"
            android:background="@color/colorRed"
            android:textColor="@color/colorWhite"
            android:textSize="24dp"/>

    </LinearLayout>

</LinearLayout>